# flo-ai

./: .dockerignore  .pre-commit-config.yaml  CODEX_MCP_SETUP.md  CONTRIBUTING.md  DOCKER_SETUP.md  GET_YOUR_URL.md  GROK4_IMPLEMENTATION_SUMMARY.md  LICENSE-FloAI.txt  Procfile  README.md  README_DEPLOYMENT.md  README_Legacy.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  TOOLS.md  api_example.py  cognitive_engine.c  cognitive_engine_demo  cognitive_engine_fixes.md  deploy.sh  deployment_guide.md  docker-compose.dev.yml  docker-compose.sample.yml  dr_edwards_legacy.html  grok4_api_client.py  grok4_api_simple.py  grok4_flo_ai.py  grok4_transformer_lattice.c  index.html  install-dep-local.sh  lattice_demo  legitimate_deployment.md  ppm.yml  requirements.txt  requirements_grok4.txt  script.js  setup_grok4.py  styles.css  trajectory.csv  transformer_lattice.c  (+1 more)
wavefront/server/: pyproject.toml
wavefront/server/apps/call_processing/: pyproject.toml
wavefront/server/apps/call_processing/call_processing/: config.ini  server.py  utils.py
wavefront/server/apps/floconsole/: pyproject.toml
wavefront/server/apps/floconsole/floconsole/: config.ini  server.py
wavefront/server/apps/floware/: pyproject.toml
wavefront/server/apps/floware/floware/: channels.py  config.ini  server.py
wavefront/server/apps/floware/tests/: conftest.py  test_config_controller.py
wavefront/server/apps/inference_app/: pyproject.toml
wavefront/server/apps/inference_app/inference_app/: config.ini  inference_app_container.py  server.py
wavefront/server/background_jobs/rag_ingestion/: pyproject.toml
wavefront/server/background_jobs/rag_ingestion/rag_ingestion/: env.py  main.py
wavefront/server/background_jobs/workflow_job/: pyproject.toml
wavefront/server/background_jobs/workflow_job/workflow_job/: config.ini  main.py  models.py  workflow_listener.py  workflow_processor.py
wavefront/server/docker/: call_processing.Dockerfile  floconsole.Dockerfile  floware.Dockerfile  inference_app.Dockerfile  workflow.Dockerfile
wavefront/server/modules/agents_module/: pyproject.toml
wavefront/server/modules/agents_module/agents_module/: agents_container.py
wavefront/server/modules/agents_module/tests/: test_input_processing_utils.py
wavefront/server/modules/api_services_module/: README.md  pyproject.toml
wavefront/server/modules/api_services_module/api_services_module/: __init__.py  api_services_container.py  env.py
wavefront/server/modules/api_services_module/tests/: __init__.py  conftest.py  test_example.py  test_integration_with_mock_backend.py  test_payload_validation.py  test_service_deletion.py  test_simple_integration.py
wavefront/server/modules/auth_module/: pyproject.toml
wavefront/server/modules/auth_module/auth_module/: auth_container.py
wavefront/server/modules/auth_module/tests/: conftest.py  test_superset_controller.py
wavefront/server/modules/common_module/: pyproject.toml
wavefront/server/modules/common_module/common_module/: common_cache.py  common_container.py  response_formatter.py  scheduler.py
wavefront/server/modules/common_module/tests/: conftest.py  test_odata_parser.py  test_request_id_middleware.py
wavefront/server/modules/db_repo_module/: pyproject.toml
wavefront/server/modules/db_repo_module/db_repo_module/: alembic.ini  db_repo_container.py
wavefront/server/modules/gold_module/: pyproject.toml
wavefront/server/modules/gold_module/gold_module/: gold_container.py
wavefront/server/modules/inference_module/: pyproject.toml
wavefront/server/modules/inference_module/inference_module/: inference_container.py
wavefront/server/modules/inference_module/tests/: conftest.py  test_inference_controller.py
wavefront/server/modules/insights_module/: pyproject.toml
wavefront/server/modules/insights_module/insights_module/: insights_container.py
wavefront/server/modules/insights_module/tests/: conftest.py  test_pvo_controller.py
wavefront/server/modules/knowledge_base_module/: pyproject.toml
wavefront/server/modules/knowledge_base_module/knowledge_base_module/: __init__.py  knowledge_base_container.py
wavefront/server/modules/knowledge_base_module/tests/: conftest.py  test_knowledge_base_controller.py  test_knowledge_base_document_controller.py  test_rag_retrieval_controller.py
wavefront/server/modules/llm_inference_config_module/: pyproject.toml
wavefront/server/modules/llm_inference_config_module/llm_inference_config_module/: container.py
wavefront/server/modules/llm_inference_config_module/tests/: test_inference_proxy.py
wavefront/server/modules/plugins_module/: pyproject.toml
wavefront/server/modules/plugins_module/plugins_module/: plugins_container.py
wavefront/server/modules/product_analysis_module/: pyproject.toml
wavefront/server/modules/product_analysis_module/product_analysis_module/: product_analysis_container.py  product_analysis_service.py
wavefront/server/modules/product_analysis_module/tests/: conftest.py  test_product_analysis_controllers.py
wavefront/server/modules/tools_module/: pyproject.toml
wavefront/server/modules/tools_module/tools_module/: available_tools.json  tools_container.py
wavefront/server/modules/user_management_module/: pyproject.toml
wavefront/server/modules/user_management_module/tests/: conftest.py  test_access_controller.py  test_auth_controller.py  test_user_controller.py
wavefront/server/modules/user_management_module/user_management_module/: router.py  user_container.py
wavefront/server/modules/voice_agents_module/: pyproject.toml
wavefront/server/modules/voice_agents_module/voice_agents_module/: voice_agents_container.py
wavefront/server/plugins/authenticator/: README.md  pyproject.toml
wavefront/server/plugins/authenticator/authenticator/: __init__.py  factory.py  helper.py  types.py
wavefront/server/plugins/datasource/: pyproject.toml
wavefront/server/plugins/datasource/datasource/: __init__.py  helper.py  odata_parser.py  types.py
wavefront/server/plugins/datasource/tests/: test_join_operations.py  test_odata_parser_lex.py
wavefront/server/scripts/: generate-keys.sh
(+672 files in other folders)
