[project]
name = "floconsole"
version = "0.1.0"
description = "Flo Console backend for rootflo apps"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "flo-cloud",
    "fastapi>=0.115.2,<1.0.0",
    "psycopg[binary,pool]>=3.2.3,<4.0.0",
    "uvicorn>=0.30.5,<1.0.0",
    "bcrypt>=4.2.1,<5.0.0",
    "alembic>=1.15.2,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "dependency-injector>=4.46.0,<5.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "async-lru>=2.0.5",
]

[tool.uv.sources]
common-module = { workspace = true }
flo-cloud = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["floconsole"]
