[project]
name = "floware"
version = "0.1.0"
description = "AI middleware for rootflo apps"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "auth-module",
    "common-module",
    "db-repo-module",
    "gold-module",
    "insights-module",
    "knowledge-base-module",
    "user-management-module",
    "plugins-module",
    "product-analysis-module",
    "agents-module",
    "inference-module",
    "llm-inference-config-module",
    "tools-module",
    "api-services-module",
    "voice-agents-module",


    "fastapi>=0.115.2,<1.0.0",
    "uvicorn>=0.30.1,<1.0.0",
    "dependency-injector>=4.42.0,<5.0.0",
    "python-multipart==0.0.9",
    "python-dotenv>=1.1.0,<2.0.0",
    "pottery>=3.0.1,<4.0.0"
]

[tool.uv.sources]
auth-module = { workspace = true }
common-module = { workspace = true }
db-repo-module = { workspace = true }
gold-module = { workspace = true }
insights-module = { workspace = true }
knowledge-base-module = { workspace = true }
user-management-module = { workspace = true }
plugins-module = {workspace = true}
product-analysis-module = {workspace = true }
agents-module = {workspace = true}
inference-module = {workspace = true}
llm-inference-config-module = {workspace = true}
tools-module = {workspace = true}
api-services-module = {workspace = true}
voice-agents-module = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["floware"]
