[project]
name = "inference-app"
version = "0.1.0"
description = "Inference application for PyTorch models"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "flo-cloud",
    "fastapi>=0.115.2,<1.0.0",
    "uvicorn>=0.30.1,<1.0.0",
    "dependency-injector>=4.42.0,<5.0.0",
    "python-multipart==0.0.9",
    "python-dotenv>=1.1.0,<2.0.0",
    "torchvision==0.16.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0,<12",
    "psycopg2>=2.9.10,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "accelerate>=0.33.0,<1.0.0",
    "transformers>=4.45.0"
]

[tool.uv.sources]
common-module = { workspace = true }
flo-cloud = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inference_app"]
