[project]
name = "rag-ingestion"
version = "0.0.1"
description = "AI Insights from Voice"
authors = [
    {name = "rootflo", email = "*@rootfor.xyz"}
]
requires-python = ">=3.11"
dependencies = [
    "flo-cloud",
    "flo-utils",
    "db-repo-module",
    "tiktoken>=0.9.0",
    "textract>=1.6.5",
    "transformers>=4.45.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0,<2.0.0",
    "pyjwt[crypto]>=2.9.0",
    "torchvision==0.16.0",
    "accelerate>=0.33.0,<1.0.0",
]

[tool.uv.sources]
flo-cloud = { workspace = true }
flo-utils = { workspace = true }
db-repo-module = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_ingestion"]
