[project]
name = "workflow-job"
version = "0.0.1"
description = "AI Insights from Voice"
authors = [
    {name = "rootflo", email = "*@rootfor.xyz"}
]
requires-python = ">=3.11"
dependencies = [
    "agents-module",
    "flo-cloud",
    "flo-utils",
    "common-module",
    "python-dotenv>=1.1.0,<2.0.0",
]

[tool.uv.sources]
agents-module = { workspace = true}
flo-cloud = { workspace = true }
flo-utils = { workspace = true }
common-module = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflow_job"]
