[project]
name = "agents-module"
version = "0.1.0"
description = "Agents module for inference"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "flo-cloud",
    "flo-utils",
    "tools-module",
    "api-services-module",
    "flo-ai>=1.1.0-rc5",
]

[tool.uv.sources]
common-module = { workspace = true }
flo-utils = { workspace = true }
flo-cloud = { workspace = true }
tools-module = {workspace = true}
api-services-module = {workspace = true}

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_module"]
