[project]
name = "api-services-module"
version = "0.1.0"
description = ""
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
    "common-module",
    "db-repo-module",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[tool.uv.sources]
common-module = { workspace = true }
db-repo-module = { workspace = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.build.targets.wheel]
packages = ["api_services_module"]
