[project]
name = "auth-module"
version = "0.0.1"
description = "Authentication module"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "flo-cloud",
    "dependency-injector>=4.42.0,<5.0.0",
    "msgraph-sdk>=1.5.4,<2.0.0",
    "pyjwt[crypto]>=2.9.0",
]

[tool.uv.sources]
common-module = { workspace = true }
flo-cloud = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_module"]
