[project]
name = "common-module"
version = "0.1.0"
description = ""
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.2,<1.0.0",
    "loguru>=0.7.2,<1.0.0",
    "dependency-injector>=4.42.0,<5.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "redis>=5.2.1,<6.0.0",
    "prometheus-client>=0.22.1,<1.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "testing-postgresql>=1.3.0,<2.0.0"
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common_module"]
