[project]
name = "db-repo-module"
version = "0.1.0"
description = ""
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common_module",
    "dependency-injector>=4.42.0,<5.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "alembic>=1.14.1,<2.0.0",
    "redis>=5.2.1,<6.0.0",
    "pgvector>=0.4.1",
    "tenacity>=8.1.0,<9.0.0",
    "psycopg[binary,pool]>=3.2.3,<4.0.0",
]

[tool.uv.sources]
common-module = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db_repo_module"]
