[project]
name = "gold-module"
version = "0.1.0"
description = ""
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "dependency-injector>=4.42.0,<5.0.0",
    "fastapi>=0.115.2,<1.0.0",
    "google-cloud-storage<3.0.0",
    "google-cloud-pubsub>=2.29.0,<3.0.0",
]

[tool.uv.sources]
common-module = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gold_module"]
