[project]
name = "inference-module"
version = "0.1.0"
description = "Agents module for inference"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "db-repo-module",
    "flo-cloud",
]

[tool.uv.sources]
common-module = { workspace = true }
db-repo-module = { workspace = true }
flo-cloud = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "testing-postgresql>=1.3.0,<2.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inference_module"]
