[project]
name = "insights-module"
version = "0.0.1"
description = "Insights Creation Module"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "common-module",
    "db-repo-module",
    "pyyaml>=6.0.3,<7",
    "dependency-injector>=4.42.0,<5.0.0",
    "redshift-connector>=2.1.5,<3.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "fastapi>=0.115.2,<1.0.0",
    "dacite>=1.9.2,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "boto3<=1.38.40",
    "google-cloud-bigquery==3.34.0",
    "google-cloud-storage<3.0.0",
]

[tool.uv.sources]
common-module = { workspace = true }
db-repo-module = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "testing-postgresql>=1.3.0,<2.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["insights_module"]
