[project]
name = "knowledge-base-module"
version = "0.1.0"
description = ""
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "datasource",
    "flo-cloud",
    "pydantic>=2.11.3,<3.0.0",
    "pymupdf>=1.25.5,<2.0.0",
    "tiktoken~=0.9.0",
    "numpy>=1.24,<2.0",
    "pandas~=2.2.3",
    "ollama~=0.4.8",
    "textract~=1.6.5",
    "flo-ai==1.1.0-rc7",
    "google-cloud-pubsub~=2.30.0",
    "boto3<=1.38.40",
    "pyyaml>=6.0.3,<7",
    "flo-cloud",
    "python-multipart",
]

[tool.uv.sources]
flo-cloud = { workspace = true }
auth-module = { workspace = true }
common-module = { workspace = true }
db-repo-module = { workspace = true }
user-management-module = { workspace = true }
datasource = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "testing-postgresql>=1.3.0,<2.0.0",
    "auth-module",
    "common-module",
    "db-repo-module",
    "user-management-module",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_base_module"]
