[project]
name = "plugins-module"
version = "0.0.1"
description = "Authentication module"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "authenticator",
    "auth-module",
    "common-module",
    "db-repo-module",
    "datasource",
    "user-management-module",

    "dependency-injector>=4.42.0,<5.0.0",
]

[tool.uv.sources]
authenticator = { workspace = true }
auth-module = { workspace = true }
common-module = { workspace = true }
db-repo-module = { workspace = true }
datasource = { workspace = true }
user-management-module = { workspace = true}

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugins_module"]
