[project]
name = "product-analysis-module"
version = "0.1.0"
description = ""
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]

requires-python = ">=3.11"
dependencies = [
    "common-module",
    "db-repo-module",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true

[tool.uv.sources]
common-module = { workspace = true }
db-repo-module = { workspace = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.build.targets.wheel]
packages = ["product_analysis_module"]
