[project]
name = "user-management-module"
version = "0.0.1"
description = "User Management Module"
authors = [
    { name = "rootflo engineering", email = "engineering@rootflo.ai" }
]
requires-python = ">=3.11"

dependencies = [
    "auth-module",
    "db-repo-module",

    "pydantic[email]>=2.9.2,<3.0.0",
    "dependency-injector>=4.42.0,<5.0.0",
    "fastapi>=0.115.2,<1.0.0",
    "authlib>=1.3.2,<2.0.0",
    "bcrypt>=4.2.1,<5.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "google-auth-httplib2>=0.2.0,<1.0.0",
    "google-api-python-client>=2.0.0,<3.0.0"
]

[tool.uv.sources]
auth-module = { workspace = true }
db-repo-module = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "testing-postgresql>=1.3.0,<2.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["user_management_module"]
