[project]
name = "authenticator"
version = "0.1.0"
description = "Authenticator plugin"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["authenticator"]
